# CRM-Cleaner-Data-Medallion-Based

./: .gitignore  README.md  crm_ventas_sucio.csv  pyproject.toml
.github/workflows/: ci.yml
backend/: requirements.txt
backend/app/: __init__.py  main.py
backend/app/models/: api_models.py
backend/app/routers/: chat.py  config.py  metrics.py  pipeline.py  review.py  schema.py
backend/app/services/: framework_service.py
backend/data/runs/4bb1c905/bronze/: 20260311_151445_288903b5_6f2c6285_test_20_filas.csv
backend/data/runs/4bb1c905/gold/: 20260311_151457_e4437784_gold.json
backend/data/runs/4bb1c905/silver/: 20260311_151456_37a52585_clean.csv  review_entities.json
backend/data/runs/581505ec/gold/: 20260311_145411_b5e458ea_gold.json
backend/data/uploads/: 1d9d1f0f_sample_dirty.csv  22d37176_crm_ventas_sucio.csv
examples/: basic_pipeline.py  custom_hooks.py  llm_cleaning.py  rag_queries.py  sample_config.yaml
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: Layout.tsx
frontend/src/pages/: Chat.tsx  Compare.tsx  Dashboard.tsx  Intro.tsx  Metrics.tsx  ProcessCSV.tsx  Review.tsx  Settings.tsx
frontend/src/store/: appStore.ts
src/crm_medallion/: __init__.py  framework.py
src/crm_medallion/bronze/: __init__.py  ingester.py  models.py
src/crm_medallion/cli/: __init__.py  main.py
src/crm_medallion/config/: __init__.py  framework_config.py  schema.py
src/crm_medallion/gold/: __init__.py  aggregator.py  models.py  rag_engine.py  rag_models.py
src/crm_medallion/silver/: __init__.py  cleaner.py  deduplicator.py  layer.py  llm_cleaner.py  models.py  parser.py  rules.py  validator.py
src/crm_medallion/utils/: __init__.py  errors.py  hooks.py  logging.py  retry.py  security.py
tests/: __init__.py
tests/fixtures/: sample_dirty.csv  sample_inconsistent_columns.csv  sample_latin1.csv  sample_valid.csv
tests/unit/: __init__.py  test_bronze_layer.py  test_cli.py  test_config.py  test_deduplicator.py  test_errors.py  test_framework.py  test_gold_layer.py  test_hooks.py  test_llm_cleaner.py  test_logging.py  test_rag_engine.py  test_schema.py  test_security.py  test_silver_layer.py
(+4 files in other folders)
